# log-lens

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.train  LICENSE  MODEL_CARD.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
resources/dataset_public/Android_v2/duplicate_type1/issue_1/: readme.txt
resources/dataset_public/Android_v2/duplicate_type1/issue_10/: readme.txt
resources/dataset_public/Android_v2/duplicate_type1/issue_11/: readme.txt
resources/dataset_public/Android_v2/duplicate_type1/issue_2/: readme.txt
resources/dataset_public/Android_v2/duplicate_type1/issue_3/: readme.txt
resources/dataset_public/Android_v2/duplicate_type1/issue_4/: readme.txt
resources/dataset_public/Android_v2/duplicate_type1/issue_5/: readme.txt
resources/dataset_public/Android_v2/duplicate_type1/issue_6/: readme.txt
resources/dataset_public/Android_v2/duplicate_type1/issue_7/: readme.txt
resources/dataset_public/Android_v2/duplicate_type1/issue_8/: readme.txt
resources/dataset_public/Android_v2/duplicate_type1/issue_9/: readme.txt
resources/dataset_public/Android_v2/duplicate_type2/issue_1/: readme.txt
resources/dataset_public/Android_v2/duplicate_type2/issue_10/: readme.txt
resources/dataset_public/Android_v2/duplicate_type2/issue_11/: readme.txt
resources/dataset_public/Android_v2/duplicate_type2/issue_12/: readme.txt
resources/dataset_public/Android_v2/duplicate_type2/issue_13/: readme.txt
resources/dataset_public/Android_v2/duplicate_type2/issue_14/: readme.txt
resources/dataset_public/Android_v2/duplicate_type2/issue_2/: readme.txt
resources/dataset_public/Android_v2/duplicate_type2/issue_3/: readme.txt
resources/dataset_public/Android_v2/duplicate_type2/issue_4/: readme.txt
resources/dataset_public/Android_v2/duplicate_type2/issue_5/: readme.txt
resources/dataset_public/Android_v2/duplicate_type2/issue_6/: readme.txt
resources/dataset_public/Android_v2/duplicate_type2/issue_7/: readme.txt
resources/dataset_public/Android_v2/duplicate_type2/issue_8/: readme.txt
resources/dataset_public/Android_v2/duplicate_type2/issue_9/: readme.txt
src/api/: __init__.py  main.py  schemas.py  services.py
src/classifier/: __init__.py  main.py
src/classifier/anomaly/: __init__.py  calibration.py  scorer.py  severity.py
src/classifier/evaluation/: __init__.py  benchmark_models.py
src/classifier/inference/: __init__.py  batch_inference.py  inference.py
src/classifier/training/: __init__.py  special_token_discovery.py  tokenizer.py  trainer.py  trainer_args.py
src/classifier/utils/: __init__.py  config.py
src/clusterer/: __init__.py  embedder.py  engine.py  evaluator.py  main.py  visualizer.py
src/configs/: __init__.py  drain3_config.py  seeding.py  settings.py
src/data_manager/: __init__.py
src/data_manager/logs/: __init__.py  dataset_preprocessor.py  log_dataset.py  log_entry.py  log_file.py  log_labels.py  processed_log.py
src/data_manager/masker/: __init__.py  config.py  parser.py  pipeline.py  template_results.py
tests/: __init__.py  drain3_trainer.py  sample_logs.py  test_dataset_preprocessor.py  test_log_labels.py  test_scorer.py  test_severity.py
