[project]
name = "log-lens"
version = "0.1.0"
description = "AI-powered platform for parsing, masking, classifying, and anomaly-scoring infrastructure logs, with API serving, evaluation, and clustering for operational insights."
authors = [
    { name = "Hazem Khaled", email = "hazem.mkhaled@icloud.com" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12,<3.14"

[project.scripts]
log-lens = "classifier.main:main"
log-lens-cluster = "clusterer.main:main"
log-lens-sample = "data_manager.logs.dataset_preprocessor:main"

[tool.poetry]
packages = [
    {include = "api", from = "src"},
    {include = "classifier", from = "src"},
    {include = "clusterer", from = "src"},
    {include = "configs", from = "src"},
    {include = "data_manager", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
torch = "^2.10.0"
torchmetrics = "^1.0.0"
transformers = "^5.2.0"
accelerate = "^1.12.0"
evaluate = "^0.4.0"
datasets = "^4.6.0"
tensorboard = "^2.20.0"
sentencepiece = "^0.2.0"
einops = "^0.8.0"
scipy = "^1.17.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.8.0"
matplotlib = "^3.7.0"
fastapi = "^0.135.0"
uvicorn = "^0.41.0"
python-dotenv = "^1.2.0"
setuptools = "^81.0.0"
drain3 = "^0.9.0"
protobuf = "^7.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = ">=0.6"
mypy = "^1.4.0"
pre-commit = "^4.0.0"

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
files = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
